add dbcontext and CreateDatabase migration

--- a/Makarov_Mikhail_Kt-31-20_Lab1/appsettings.json
+++ b/Makarov_Mikhail_Kt-31-20_Lab1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=1;Host=localhost;Port=5432;Database=student_db;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
